# pbwt_hkhan

./: Cargo.toml  hkhan.vcf  sequence (2).fasta  test.txt
src/: comparison.rs  fasta_loader.rs  helper_structs.rs  imputer.rs  main.rs  old_pca_weights.txt  pbwt.rs  pbwt_structs.rs  pca_weights.rs  positions_parse.rs  sites_loader.rs  spaced_pbwt.rs  storer.rs  vcf_loader.rs  vcf_structs.rs  vcf_writer.rs
vcf_data/: illu1M.sites  omni10.pbwt  omni10.samples  omni10.sites  omni4k-10.samples
