[package]
name = "pbwt_hkhan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
bio = "1.0.0"
rand = "0.8.5"
vcf = "0.6.1"
flate2 = "1.0.24"
csv = "1.1.6"
serde = "1.0.147"
indexmap = "1.9.1"