[package]
name = "pbwt_hkhan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
bio = "1.0.0"
rand = "0.8.5"
vcf = "0.6.1"
flate2 = "1.0.24"
csv = "1.1.6"
serde = "1.0.147"
indexmap = "1.9.1"
serde_json = "1.0.87"
bincode = "1.3.3"
xz2 = "0.1.7"
serde_bytes = "0.11.7"
closure = "0.3.0"
threadpool = "1.8.1"
xgboost-rs = "0.3.0"